fix: fixed css z-index

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,10 +1,25 @@
 .header {
-  background-color: #577ada;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
   //! padding
+  &::before {
+    z-index: -1;
+    content: '';
+    height: 140%;
+    left: 0px;
+    pointer-events: none;
+    position: absolute;
+    top: 0px;
+    transition: opacity 150ms ease 0s;
+    width: 100%;
+    opacity: 0.5;
+    background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
+  }
 }
 
 .logo {
