--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -1,18 +1,31 @@
 .hero {
+  position: relative;
+  padding: 300px 0 50px 50px;
   background-image: url('https://images.unsplash.com/photo-1509062522246-3755977927d7');
   background-repeat: no-repeat;
-  // object-fit: cover;
   display: flex;
   justify-content: flex-end;
   background-position: center;
   height: 80vh;
-  padding: 0 50px;
+  z-index: 0;
+  &__filter-box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #8d48b5;
+    opacity: 0.1;
+    z-index: 1;
+  }
   &__box {
+    position: relative;
     max-width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-end;
+    z-index: 2;
   }
   &__call-action {
     font-size: 25px;
